welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:3: error: type fill is not a member of object Array
 var occurences = new Array.fill[Int](nums)(0)
                            ^